<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>JavaSandbox</groupId>
  <artifactId>JavaSandbox</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <name>JavaSandbox</name>
  <properties>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <maven.compiler.source>1.8</maven.compiler.source>
      <maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
      <junit.jupiter.version>5.4.2</junit.jupiter.version>
      <maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version>
   </properties>
  <build>
    <sourceDirectory>src</sourceDirectory>
    <testSourceDirectory>tests</testSourceDirectory>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
      </plugin>
      <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>${maven-surefire-plugin.version}</version>
      </plugin>
    </plugins>
  </build>
  <dependencies>
	  <dependency>
	    <groupId>com.google.guava</groupId>
	    <artifactId>guava</artifactId>
	    <version>23.5-jre</version> <!-- or 23.5-android for the Android flavor -->
	  </dependency>
	  <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter</artifactId>
         <version>${junit.jupiter.version}</version>
         <scope>test</scope>
      </dependency>
   </dependencies>
</project>